--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,18 @@ body {
 .third-row {
   position: relative;
   width: 100%;
-  height: 2340px; /* Matches the height of the banner */
+  height: 20%; /* Matches the height of the banner */
+  background-color: #000000; /* White background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Fourth Row */
+.fourth-row {
+  position: relative;
+  width: 100%;
+  height: 20%; /* Matches the height of the banner */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -143,10 +154,10 @@ body {
 /* Logo for the third row */
 .logo-overlay-third {
   position: absolute;
-  bottom: 500px; /* Adjust distance from the bottom edge */
-  right: 30px; /* Adjust distance from the right edge */
-  width: 120px; /* Size of the logo */
-  height: auto;
+  bottom: 40px; /* Adjust to exact distance from bottom edge */
+  right: 40px; /* Adjust to exact distance from the right edge */
+  width: 120px; /* Set the size of the logo */
+  height: auto; /* Maintain aspect ratio */
   z-index: 10;
 }
 
@@ -167,23 +178,18 @@ body {
 
   /* Second logo above the first one */
 .logo-above {
-  position: absolute;
-  bottom: 35px; /* Adjust to exact distance from bottom edge */
-  right: 20px; /* Adjust to exact distance from the right edge */
-  width: 60px; /* Set the size of the logo */
-  height: auto; /* Maintain aspect ratio */
-  z-index: 10;
+    bottom: 17%; /* Adjust for smaller screens */
+    right: 5%; /* Adjust for smaller screens */
+    width: 60px; /* Adjust size for smaller screens */
 }
 
   /* Logo for the third row */
 .logo-overlay-third {
-  position: absolute;
-  bottom: 500px; /* Adjust distance from the bottom edge */
-  right: 30px; /* Adjust distance from the right edge */
-  width: 120px; /* Size of the logo */
-  height: auto;
-  z-index: 10;
+    bottom: 5%; /* Adjust for smaller screens */
+    right: 5%; /* Adjust for smaller screens */
+    width: 60px; /* Adjust size for smaller screens */
 }
+  
   
 }
 
