--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column; /* Stack elements vertically */
   min-height: 100vh;
@@ -43,8 +43,6 @@ body {
   cursor: pointer;
   transition: opacity 0.1s linear; /* Smooth transition */
 }
-
-
 
 
 .menu {
@@ -84,10 +82,9 @@ body {
 .banner {
   height: 20%; /* Fit the row’s height */
   width: 100%; /* Maintain aspect ratio */
-  max-width: 2340px; /* Prevent image overflow horizontally */
-  object-fit: cover; /* Cover the row’s area without leaving gaps */
+  max-width: 1200px; /* Prevent image overflow horizontally */
+display: block; /* Ensure no inline gaps */
 }
-
 
 
 /* Logo overlay styling */
@@ -108,6 +105,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 /* Optional specific logo styling for the second row */
@@ -164,7 +162,7 @@ body {
 
 
 /* Responsive adjustments */
-@media (max-width: 768px) {
+@media (max-width: 810px) {
   .first-row {
     height: auto; /* Adjust height if needed for smaller screens */
   }
@@ -188,6 +186,42 @@ body {
     bottom: 5%; /* Adjust for smaller screens */
     right: 5%; /* Adjust for smaller screens */
     width: 60px; /* Adjust size for smaller screens */
+}
+}
+
+  /* Responsive adjustments */
+@media (max-width: 450px) {
+  .first-row {
+    height: auto; /* Adjust height if needed for smaller screens */
+  }
+
+  .logo {
+    height: 20px;
+  }
+
+   .menu a {
+    font-size: 10px;
+  }
+
+  .logo-overlay {
+    bottom: 5%; /* Adjust for smaller screens */
+    right: 5%; /* Adjust for smaller screens */
+    width: 40px; /* Adjust size for smaller screens */
+    
+  }
+
+  /* Second logo above the first one */
+.logo-above {
+    bottom: 17%; /* Adjust for smaller screens */
+    right: 5%; /* Adjust for smaller screens */
+    width: 40px; /* Adjust size for smaller screens */
+}
+
+  /* Logo for the third row */
+.logo-overlay-third {
+    bottom: 5%; /* Adjust for smaller screens */
+    right: 5%; /* Adjust for smaller screens */
+    width: 40px; /* Adjust size for smaller screens */
 }
   
   
@@ -224,27 +258,7 @@ body {
   border-left: none; /* Remove border for the first column */
 }
 
-/* Responsive scaling for banner image */
-@media (max-width: 768px) {
-  .first-row {
-    height: 150px; /* Reduce height for smaller devices */
-  }
-
-  .banner {
-    height: 100%; /* Let the height adjust automatically */
-    max-width: 100%; /* Slight margin on smaller screens */
-    object-fit: contain; /* Ensure the image isn’t cropped */
-  }
-}
 
 @media (min-width: 1200px) {
-  .first-row {
-    height: 20%; /* Retain the original height for large screens */
-  }
 
-  .banner {
-    height: 20%; /* Ensure it perfectly fits the row height */
-    width: 80%; /* Maintain aspect ratio */
-    object-fit: cover; /* No gaps or stretching */
-  }
 }
