--- a/styles.css
+++ b/styles.css
@@ -154,15 +154,6 @@ display: block; /* Ensure no inline gaps */
   align-items: center;
 }
 
-/* Fourth Row */
-.fourth-row {
-  position: relative;
-  width: 100%;
-  height: 20%; /* Matches the height of the banner */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 /* Logo for the third row */
 .logo-overlay-third {
@@ -174,6 +165,25 @@ display: block; /* Ensure no inline gaps */
   z-index: 10;
 }
 
+/* Fourth Row */
+.fourth-row {
+  position: relative;
+  width: 100%;
+  height: 20%; /* Matches the height of the banner */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Fifth Row */
+.fifth-row {
+  position: relative;
+  width: 100%;
+  height: 20%; /* Matches the height of the banner */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 
 /* Responsive adjustments */
