--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,17 @@ display: block; /* Ensure no inline gaps */
   align-items: center;
 }
 
+/* Fifth Row */
+.sixth-row {
+  position: relative;
+  width: 100%;
+  height: 20%; /* Matches the height of the banner */
+  background-color: #00008B; /* White background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 
 /* Responsive adjustments */
